[tool.poetry]
authors = ["Niko Ehrenfeuchter <nikolaus.ehrenfeuchter@unibas.ch>"]
description = "Prometheus metrics collector and exporter for RLM (Reprise License Manager)"
include = ["resources/systemd/rlm-exporter.service"]
license = "GPL-3.0-or-later"
name = "rlm-prometheus"
readme = "README.md"
version = "0.1.1"

homepage = "https://pypi.org/project/rlm-prometheus/"
keywords = ["prometheus", "metrics", "license-metrics"]
repository = "https://github.com/imcf/rlm-prometheus"

[tool.poetry.dependencies]
PyYAML = "^6.0"
click = "^8.1.3"
loguru = "^0.6.0"
lxml = "^4.9.1"
pandas = "^1.5.1"
prometheus-client = "^0.15.0"
python = "^3.9"
python-box = "^6.1.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.5"

[tool.poetry.scripts]
rlm_exporter = "rlm_prometheus.cli:run_rlm_exporter"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
